--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,13 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q1KL3B4H37"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3Y3KBXT4F7"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-Q1KL3B4H37');
+    gtag('config', 'G-3Y3KBXT4F7');
   </script>
   
 </head>
